stop inisible pseudo element from covering the save data button :P

--- a/src/less/drawer.less
+++ b/src/less/drawer.less
@@ -98,7 +98,6 @@
       &:before {
         @size: 25px;
         content: "";
-        width: 100px;
         height: 0;
         display: inline-block;
         position: relative;
